started wallet ui and fixed syntax err

--- a/src/app/wallet/wallet.component.html
+++ b/src/app/wallet/wallet.component.html
@@ -1,3 +1,48 @@
-<p>
-  wallet works!
-</p>
+<div class="main-body">
+    <div class="create-new-body">
+
+        <div class="nav-bar-div">
+
+            <a href="#" class="side-bar-link">
+                <i class="fas fa-wallet fa-3x"></i>
+            </a>
+            <a href="#" class="side-bar-link">
+                <i class="fas fa-address-book fa-3x"></i>
+            </a>    
+            <a href="#" class="side-bar-link">
+                <i class="fas fa-university fa-3x"></i>
+            </a>
+            <a href="#" class="side-bar-link">    
+                <i class="fas fa-user-secret fa-3x"></i>
+            </a>
+        </div>
+        <div class="main-container">
+            <div class="balance">
+                <img src="C:\Users\alexr\Desktop\navcoin-angular\src\assets\nav.png" class="nav-svg">
+
+            </div>
+            <input class="amount-input">
+            <div class="middle-container">
+                <a href="#">
+                    <div class="request-div">
+                        <p>
+                            Request
+                        </p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="send-div">
+                        <p>
+                            Send
+                        </p>
+                    </div>
+                </a>
+            </div>
+            <div class="send-to">
+                
+            </div>
+
+        
+        </div>
+    </div>
+</div>
