--- a/src/app/wallet/wallet.component.html
+++ b/src/app/wallet/wallet.component.html
@@ -18,13 +18,16 @@
         </div>
         <div class="main-container">
             <div class="balance">
-                <img src="C:\Users\alexr\Desktop\navcoin-angular\src\assets\nav.png" class="nav-svg">
-
+                <img src="https://cdn.freebiesupply.com/logos/large/2x/nav-1-logo-png-transparent.png" class="nav-svg">
+                <div class="amount-nav">
+                    <h1>10,000 NAV</h1>
+                </div>
             </div>
             <input class="amount-input">
             <div class="middle-container">
                 <a href="#">
                     <div class="request-div">
+                        <i class="fas fa-qrcode fa-2x"></i>
                         <p>
                             Request
                         </p>
@@ -32,14 +35,35 @@
                 </a>
                 <a href="#">
                     <div class="send-div">
+                        <i class="fas fa-edit fa-2x"></i>
                         <p>
                             Send
                         </p>
                     </div>
                 </a>
             </div>
-            <div class="send-to">
-                
+            <div class="statements">
+                <div class="transation-one">
+                    <div class="amount-address">
+                        <h1>-20NAV</h1>
+                        <p>NfQJDyPrJ1DzyQQ29jQyewhS5qT3x3TMiG</p>
+                    </div>
+                    <div>
+                        <p>DEC 13 2018</p>
+                    </div>
+                </div>
+                <div class="transation-two">
+                    <div class="amount-address">
+                        <h1>-5NAV</h1>
+                        <p>NfQJDyPrJ1DzyQQ29jQyewhS5qT3x3TMiG</p>
+                    </div>
+                </div>
+                <div class="transation-three">
+                    <div class="amount-address">
+                        <h1>-12NAV</h1>
+                        <p>NfQJDyPrJ1DzyQQ29jQyewhS5qT3x3TMiG</p>
+                    </div>
+                </div>
             </div>
 
         
