--- a/src/app/wallet/wallet.component.css
+++ b/src/app/wallet/wallet.component.css
@@ -58,6 +58,7 @@ body {
     width: 500px;
     height: 300px;
     background: #515151;
+    background-image: url('https://i.imgur.com/GAYyvp3.png');
     transition-duration: 0.15s;
     display: flex;
     flex-direction: row;
@@ -194,6 +195,7 @@ body {
 }
 
 .amount-address {
+    margin-left: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -203,6 +205,9 @@ body {
     font-family: "Inconsolata", monospace;
     font-size: 30px;
     margin: 0;
+    background: linear-gradient(rgb(199, 0, 0), rgb(255, 65, 65));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .amount-address p {
