--- a/src/app/wallet/wallet.component.html
+++ b/src/app/wallet/wallet.component.html
@@ -18,10 +18,17 @@
         </div>
         <div class="main-container">
             <div class="balance">
-                <img src="https://cdn.freebiesupply.com/logos/large/2x/nav-1-logo-png-transparent.png" class="nav-svg">
-                <div class="amount-nav">
+                <div class="card-header">
+                    <img src="https://cdn.freebiesupply.com/logos/large/2x/nav-1-logo-png-transparent.png" class="nav-svg">
+
                     <h1>10,000 NAV</h1>
+
                 </div>
+                <a class="chip-anchor" href="/wallet">
+                    <div class="card-chip">
+                        <img class="chip-crop" src="https://pngimage.net/wp-content/uploads/2018/05/credit-card-chip-png-3.png">
+                    </div>
+                </a>
             </div>
             <input class="amount-input">
             <div class="middle-container">
