mostly done with the front end of this.

--- a/src/app/settings/ui-password/ui-password.component.html
+++ b/src/app/settings/ui-password/ui-password.component.html
@@ -28,7 +28,7 @@ class="overview-card grey lighten-5"
     <h4>Confirm</h4>
   </mz-modal-header>
   <mz-modal-content>
-    You are about to update the username and password used to login to the NavCoin Lite interface. If lose this password you will lose access to the wallet so make sure you keep it in a safe place.
+    You are about to update the username and password used to login to the NavCoin&nbsp;StakeBox interface. If lose this password you will lose access to the wallet so make sure you keep it in a safe place.
   </mz-modal-content>
   <mz-modal-footer>
     <button mz-button [flat]="true" mz-modal-close>Cancel</button>
