Added cf page with basic styling

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,6 +3,7 @@
   <mz-navbar-item-container  *ngIf="authed" [align]="'right'">
     <mz-navbar-item><a href="/">Overview</a></mz-navbar-item>
     <mz-navbar-item><a href="/wallet">Wallet</a></mz-navbar-item>
+    <mz-navbar-item><a href="/community-fund">Community Fund</a></mz-navbar-item>
     <mz-navbar-item><a href="/settings">Settings</a></mz-navbar-item>
     <mz-navbar-item><a href="/#/" (click)="logOut()">Logout</a></mz-navbar-item>
   </mz-navbar-item-container>
