--- a/src/app/community-fund/payment-request-list/payment-request-list.component.html
+++ b/src/app/community-fund/payment-request-list/payment-request-list.component.html
@@ -1,10 +1,74 @@
-<mz-card
-class="overview-card grey lighten-5"
-[horizontal]="true">
+<mz-card class="overview-card grey lighten-5" [horizontal]="true">
   <mz-card-title>
     Community Fund Payment Requests
   </mz-card-title>
-  <mz-card-content>
-
+  <mz-card-content class="payment-request-container">
+    <div *ngIf="!paymentRequestList || !paymentRequestVotes">Loading...</div>
+    <div *ngIf="paymentRequestList && paymentRequestVotes">
+      <div
+        *ngFor="let paymentRequest of paymentRequestList"
+        class="payment-request-info"
+      >
+        <div>
+          <div class="description-text">
+            <span>Description: </span>{{ paymentRequest.description }}.
+          </div>
+          <div>
+            <span>Amount: {{ paymentRequest.requestedAmount }}. </span>
+            <div>
+              Votes
+              <span><b>Yes:</b> {{ paymentRequest.votesYes }} - </span>
+              <span><b>No:</b> {{ paymentRequest.votesNo }} </span>
+              <span
+                [ngClass]="{
+                  status: true,
+                  pending: paymentRequest.status === 'pending',
+                  accepted:
+                    paymentRequest.status === 'accepted' ||
+                    paymentRequest.status ===
+                      'accepted waiting for enough coins in fund',
+                  rejected: paymentRequest.status === 'rejected',
+                  expired:
+                    paymentRequest.status === 'expired' ||
+                    paymentRequest.status ===
+                      'expired waiting for end of voting period'
+                }"
+              >
+                Status: {{ paymentRequest.status }}
+              </span>
+            </div>
+          </div>
+          <div>Hash: {{ paymentRequest.hash }}.</div>
+        </div>
+        <div
+          *ngIf="paymentRequest.status === 'pending'"
+          class="voting-container"
+        >
+          Voting:
+          <div class="button-container">
+            <button
+              [ngClass]="{
+                'yes-btn': true,
+                selected: votingYes(paymentRequest.hash)
+              }"
+              [disabled]="buttonDebounce"
+              (click)="paymentRequestVote(paymentRequest.hash, 'yes')"
+            >
+              Yes
+            </button>
+            <button
+              [ngClass]="{
+                'no-btn': true,
+                selected: votingNo(paymentRequest.hash)
+              }"
+              [disabled]="buttonDebounce"
+              (click)="paymentRequestVote(paymentRequest.hash, 'no')"
+            >
+              No
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </mz-card-content>
 </mz-card>
