--- a/src/app/community-fund/proposal-list/proposal-list.component.css
+++ b/src/app/community-fund/proposal-list/proposal-list.component.css
@@ -8,14 +8,14 @@
   align-items: center;
 
   color: white;
-  background:  #7d59b5;
-  border-radius: 30px; 
+  background: #7d59b5;
+  border-radius: 30px;
   padding: 15px 30px;
   margin: 10px;
   max-width: calc(800px + 60px);
 
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 .description-text {
@@ -26,7 +26,7 @@
 .voting-container {
   display: flex;
   flex-direction: column;
-  align-items:  flex-end;
+  align-items: flex-end;
   justify-content: center;
   max-width: 150px;
   width: 100%;
@@ -46,16 +46,19 @@ button {
   border: none;
   margin: 5px;
   min-width: 60px;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 button.selected {
   cursor: pointer;
 }
-button.yes-btn.selected, button.yes-btn:hover {
+button.yes-btn.selected,
+button.yes-btn:hover {
   background: lightgreen;
 }
 
-button.no-btn.selected, button.no-btn:hover {
+button.no-btn.selected,
+button.no-btn:hover {
   background: lightcoral;
 }
 
