--- a/src/app/settings/ui-password/ui-password.component.html
+++ b/src/app/settings/ui-password/ui-password.component.html
@@ -9,12 +9,12 @@ class="overview-card grey lighten-5"
       <div class="input-field col s12">
         <input id="username" type="text" class="validate"
           [(ngModel)]="uiPassword.username" name="username">
-        <label for="username">Username</label>
+        <label for="username">New Username</label>
       </div>
       <div class="input-field col s12">
         <input id="password" type="password" class="validate"
           [(ngModel)]="uiPassword.password" name="password">
-        <label for="password">Password</label>
+        <label for="password">New Password</label>
       </div>
       <div class="input-field col s12">
         <button mz-button (click)="bottomSheetModal.openModal()" class="waves-effect waves-light btn right">Update</button>
@@ -28,7 +28,20 @@ class="overview-card grey lighten-5"
     <h4>Confirm</h4>
   </mz-modal-header>
   <mz-modal-content>
-    You are about to update the username and password used to login to the NavCoin&nbsp;StakeBox interface. If lose this password you will lose access to the wallet so make sure you keep it in a safe place.
+    <p>You are about to update the username and password used to login to the NavCoin&nbsp;StakeBox interface. If lose this password you will lose access to the wallet so make sure you keep it in a safe place.</p>
+    <p>Please enter your current username and password to confirm the change</p>
+    <form #uiPasswordForm="ngForm">
+      <div class="input-field col s12">
+        <input id="username" type="text" class="validate"
+          [(ngModel)]="uiPassword.currentUsername" name="currentUsername">
+        <label for="username">Current Username</label>
+      </div>
+      <div class="input-field col s12">
+        <input id="password" type="password" class="validate"
+          [(ngModel)]="uiPassword.currentPassword" name="currentPassword">
+        <label for="password">Current Password</label>
+      </div>
+    </form>
   </mz-modal-content>
   <mz-modal-footer>
     <button mz-button [flat]="true" mz-modal-close>Cancel</button>
