Added payment request creator. Proposal creator is now functional

--- a/src/app/community-fund/community-fund.component.html
+++ b/src/app/community-fund/community-fund.component.html
@@ -2,5 +2,6 @@
 
 <app-cfund-stats></app-cfund-stats>
 <app-proposal-creator></app-proposal-creator>
+<app-payment-request-creator></app-payment-request-creator>
 <app-proposal-list></app-proposal-list>
 <app-payment-request-list></app-payment-request-list>
