Added generic rpc form to settings and homepage

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,3 +1,4 @@
 <div class="overview-grid">
-    <app-ui-password></app-ui-password>
+  <app-ui-password></app-ui-password>
+  <app-generic-rpc-form></app-generic-rpc-form>
 </div>
