Added notification bar and notification service for controlling notifications displayed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-navbar></app-navbar>
+<app-notification-bar></app-notification-bar>
+<!-- <app-notification-maker></app-notification-maker> -->
 <router-outlet></router-outlet>
