--- a/src/app/overview/transactions-view/transactions-view.component.html
+++ b/src/app/overview/transactions-view/transactions-view.component.html
@@ -1,10 +1,6 @@
-<mz-card
-class="overview-card grey lighten-5"
-[horizontal]="true">
-<mz-card-title>
-  Latest Transactions
-</mz-card-title>
-<mz-card-content>
-
-</mz-card-content>
+<mz-card class="overview-card grey lighten-5" [horizontal]="true">
+  <mz-card-title>
+    Latest Transactions
+  </mz-card-title>
+  <mz-card-content> </mz-card-content>
 </mz-card>
