--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,7 +1,9 @@
 <div class="overview-grid">
   <app-status-view class="overview-card"></app-status-view>
   <app-wallet-overview class="overview-card"></app-wallet-overview>
-  <app-transactions-view class="overview-card"></app-transactions-view>
+  <app-transactions-view
+    class="overview-card wide-card"
+  ></app-transactions-view>
   <app-deposit-view class="overview-card"></app-deposit-view>
   <app-send-to-view class="overview-card"></app-send-to-view>
   <app-proposals-view class="overview-card"></app-proposals-view>
