Updated CSS for overview page and it's cards so they are equal heights. Changed content of tx card so it has less information, added link to explorer and added overflow scrollng

--- a/src/app/overview/overview.component.css
+++ b/src/app/overview/overview.component.css
@@ -9,9 +9,12 @@
   margin: 0 auto;
 }
 
-.overview-card {
+.overview-card-container {
   grid-column: span 3;
-  width: 100%;
+}
+
+.overview-card {
+  height: 100%;
 }
 .deposit-card {
   grid-column: span 4;
@@ -20,6 +23,6 @@
   margin: 10px 0;
 }
 
-.wide-card {
-  grid-column: span 6;
+.wide-card-container {
+  grid-column: span 3;
 }
