--- a/src/app/overview/transactions-view/transactions-view.component.html
+++ b/src/app/overview/transactions-view/transactions-view.component.html
@@ -4,21 +4,29 @@
   </mz-card-title>
   <mz-card-content>
     <div *ngIf="!transactions">Transactions loading...</div>
-    <table *ngIf="transactions">
-      <thead>
-        <tr>
-          <th>Address</th>
-          <th>Amount</th>
-          <th>Confirmations</th>
-          <th>Time</th>
-        </tr>
-      </thead>
-      <tr *ngFor="let tx of transactions">
-        <td>{{ tx.address }}</td>
-        <td>{{ tx.amount }} NAV</td>
-        <td>{{ tx.confirmations }}</td>
-        <td>{{ getDateNum(tx.time) | date }}</td>
-      </tr>
-    </table>
+    <div class="tx-list">
+      <table *ngIf="transactions">
+        <thead>
+          <tr>
+            <th>Amount (NAV)</th>
+            <th>Date</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let tx of transactions" class="tx-row">
+            <td>{{ tx.amount }}</td>
+            <td>{{ getDateNum(tx.time) | date }}</td>
+            <td>
+              <a
+                [href]="'https://navexplorer.com/tx/' + tx.txid"
+                target="_blank"
+                >Details</a
+              >
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </mz-card-content>
 </mz-card>
