--- a/src/app/community-fund/community-fund.component.html
+++ b/src/app/community-fund/community-fund.component.html
@@ -4,5 +4,5 @@
   <app-proposal-creator class="small-item"></app-proposal-creator>
   <app-payment-request-creator class="small-item"></app-payment-request-creator>
   <app-proposal-list class="large-item"></app-proposal-list>
-  <app-payment-request-list class="large-item"></app-payment-request-list>
+  <!-- <app-payment-request-list class="large-item"></app-payment-request-list> -->
 </main>
